--- a/settings.ini
+++ b/settings.ini
@@ -1,4 +1,4 @@
 [General]
-MainGeometry=@ByteArray(\x1\xd9\xd0\xcb\0\x1\0\0\0\0\x1p\0\0\0\x34\0\0\x3\x85\0\0\x1\x93\0\0\x1x\0\0\0S\0\0\x3}\0\0\x1\x8b\0\0\0\0\0\0)
-RespGeometry=@ByteArray(\x1\xd9\xd0\xcb\0\x1\0\0\0\0\x1p\0\0\x1\x8f\0\0\x3u\0\0\x2y\0\0\x1p\0\0\x1\x8f\0\0\x3u\0\0\x2y\0\0\0\0\0\0)
+MainGeometry=@ByteArray(\x1\xd9\xd0\xcb\0\x1\0\0\0\0\x1p\0\0\0\x34\0\0\x3\x85\0\0\x1\x92\0\0\x1x\0\0\0R\0\0\x3}\0\0\x1\x8a\0\0\0\0\0\0)
+RespGeometry=@ByteArray(\x1\xd9\xd0\xcb\0\x1\0\0\0\0\x1p\0\0\x1\x92\0\0\x3\x85\0\0\x2\x9f\0\0\x1x\0\0\x1\xb0\0\0\x3}\0\0\x2\x97\0\0\0\0\0\0)
 SensGeometry=@ByteArray(\x1\xd9\xd0\xcb\0\x1\0\0\0\0\x3t\0\0\x2\x19\0\0\x4R\0\0\x3\x4\0\0\x3t\0\0\x2\x19\0\0\x4R\0\0\x3\x4\0\0\0\0\0\0)
